--- a/15-puzzle/src/styles/index.pcss
+++ b/15-puzzle/src/styles/index.pcss
@@ -15,7 +15,7 @@ body {
     margin: 0;
     height: 100%;
     position: relative;
-    background-color: rgb(90, 90, 90);
+    // background-color: rgb(90, 90, 90);
 }
 
 canvas {
