feat(15 puzzle): :sparkles:新增 15 puzzle 分数记录

--- a/15-puzzle/src/templates/index.html
+++ b/15-puzzle/src/templates/index.html
@@ -4,8 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>15 Puzzle</title>
+    <style>* {
+        color: #fff
+    }</style>
 </head>
 <body>
 <canvas class="js-canvas"></canvas>
+<div class="js-score-container score-container">Scores are not available.</div>
 </body>
 </html>
