feat(renju): :sparkles:Add undo button

--- a/renju/index.css
+++ b/renju/index.css
@@ -28,3 +28,22 @@ canvas {
 .copyright {
     font-size: 12px;
 }
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buttons .button {
+    display: block;
+    width: 100px;
+    height: 24px;
+    border: 1px solid #000;
+    background: #fff;
+    border-radius: 12px;
+}
+
+.status {
+    font-size: 14px;
+}
