--- a/game-of-life/index.css
+++ b/game-of-life/index.css
@@ -4,9 +4,25 @@
  */
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 canvas {
-    display: block;
+  display: block;
+}
+
+.operation-container {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgb(250, 250, 250);
+}
+
+label:after {
+  content: ':';
 }
