--- a/game-of-life/index.css
+++ b/game-of-life/index.css
@@ -22,6 +22,7 @@ canvas {
   justify-content: space-evenly;
   align-items: center;
   background-color: rgb(250, 250, 250);
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.2);
 }
 
 label:after {
