--- a/arkanoid/index.css
+++ b/arkanoid/index.css
@@ -5,11 +5,16 @@
 
 html {
   height: 100%;
+  width: 100%;
 }
 
 body {
   margin: 0;
   height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .root {
@@ -18,4 +23,7 @@ body {
 
 canvas {
   display: block;
+  flex: 0 1 auto;
+  max-width: 100%;
+  max-height: 100%;
 }
